FIX: src code adapted for JAva 1.8 (to create .jars for Fiji)